//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package papaya;

message PapayaCollections {
  map<uint32, string> label_by_id = 1;
  repeated uint64 metrics = 2;
}

message PapayaCustomCollections {
  map<uint32, string> label_by_id = 1;
  repeated uint32 flags = 2;
}

